# perde

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Makefile  Pipfile  README.md  attributes.html  benchmark.html  coverall.json  coveralls.json  dataclass.html  dataclass_attrs.html  dataclass_field_attrs.html  datetime.html  decimal.html  enum.html  enum_attrs.html  enum_mem_attrs.html  generics.html  index.html  index.md  print.html  pyproject.toml  pytest.ini  searchindex.js  searchindex.json  types.html  usage.html  uuid.html
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  docs.yml  release.yml  rust.yml  tests.yml
benches/: compare.py
docs/: book.toml  test.py
docs/src/: SUMMARY.md  attributes.md  benchmark.md  dataclass.md  dataclass_attrs.md  dataclass_field_attrs.md  datetime.md  decimal.md  enum.md  enum_attrs.md  enum_mem_attrs.md  generics.md  types.md  usage.md  uuid.md
manifest-gen/: Cargo.toml  manifests.yml
manifest-gen/src/: main.rs
manifest-gen/templates/: Cargo.toml  pyproject.toml
perde/: Cargo.toml  __init__.py  pyproject.toml
perde-core/: Cargo.toml
perde-core/src/: args.rs  attr.rs  encode.rs  error.rs  import.rs  lib.rs  methods.rs  object.rs  resolve.rs  schema.rs
perde-core/src/decode/: any.rs  class.rs  dict.rs  enums.rs  frozen_set.rs  list.rs  mod.rs  object.rs  primitive.rs  set.rs  tuple.rs  union.rs
perde-core/src/types/: args.rs  containers.rs  mod.rs  object.rs  tuple.rs
perde-json/: Cargo.toml  pyproject.toml
perde-json/src/: lib.rs
perde-msgpack/: Cargo.toml  pyproject.toml
perde-msgpack/src/: lib.rs
perde-tester/: Cargo.toml
perde-tester/src/: gen.rs  main.rs
perde-testgen/: Cargo.toml  Makefile  rename.yml  schema.yml
perde-testgen/codegen/: Cargo.toml
perde-testgen/codegen/src/: data.rs  gen.rs  lib.rs  main.rs  python.rs  rust.rs  schema.rs
perde-testgen/codegen/src/presets/: mod.rs
perde-testgen/datagen/: Cargo.toml
perde-testgen/datagen/src/: defs.rs  gen.rs  main.rs
perde-testgen/json/: 0  10  11  12  13  14  15  17  19  2  21  22  23  26  28  3  32  34  35  37  39  4  40  43  44  45  47  48  49  5  50  52  53  54  55  57  58  6  60  62  (+28 more)
perde-testgen/src/: data.rs  gen.rs  lib.rs  main.rs  rust.rs  schema.rs
perde-testgen/tests/: defs.py  tests.py
perde-tests/: README.md
perde-tests/bench/: compare.py
perde-tests/benches/: compare.py
perde-tests/tests/: test_attrs.py  test_basics.py  test_bench.py  test_default.py  test_edges.py  test_enum.py  test_error.py  test_simple.py  test_types.py  util.py
perde-toml/: Cargo.toml  pyproject.toml
perde-toml/src/: lib.rs
perde-yaml/: Cargo.toml  pyproject.toml
perde-yaml/src/: lib.rs
perde/perde/: __init__.py
perde/src/: lib.rs
perde/src/formats/: json.rs  mod.rs  msgpack.rs  toml.rs  yaml.rs
scripts/: for-each.sh  maturin.sh
src/: de.rs  encode.rs  error.rs  inspect.rs  json.rs  lib.rs  methods.rs  object.rs  resolve.rs  schema.rs  ser.rs  state.rs  types.rs  unicode.rs  util.rs  walk.py  yaml.rs
src/decode/: class.rs  dict.rs  enums.rs  list.rs  mod.rs  object.rs  option.rs  primitive.rs  set.rs  tuple.rs  union.rs
src/format/: json.rs  mod.rs  msgpack.rs  yaml.rs
src/types/: containers.rs  mod.rs  object.rs  tuple.rs
tests/: test.py  test_attrs.py  test_basics.py  util.py
tool/: Cargo.toml
tool/src/: main.rs
tool/templates/: Cargo.toml  pyproject.toml
