[package]
authors = ["Yushi Omote <yushiomote@gmail.com>"]
name = "serde-pyobj"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1.0.2"
pyo3 = { version = "0.11", features = ["extension-module"] }
serde = "1.0"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_toml = { version = "0.5", package = "toml", optional = true }
rmp-serde = { version = "0.14", optional = true }

[lib]
name = "serde_pyobj"
crate-type = ["cdylib"]

[features]
default = []
json = ["serde_json"]
yaml = ["serde_yaml"]
toml = ["serde_toml"]
msgpack = ["rmp-serde"]