[package]
authors = ["Yushi Omote <yushiomote@gmail.com>"]
name = "perde"
version = "0.1.0"
edition = "2018"

[dependencies]
pyo3 = { version = "0.11", features = ["extension-module"] }
inflections = "1.1"
smallvec = "1.4"
serde = "1.0"
serde_state = "0.4"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_toml = { version = "0.5", package = "toml", optional = true }
rmp-serde = { version = "0.14", optional = true }

[lib]
name = "perde"
crate-type = ["cdylib"]

[features]
default = []
json = ["serde_json"]
yaml = ["serde_yaml"]
toml = ["serde_toml"]
msgpack = ["rmp-serde"]
