[package]
authors = ["Yushi Omote <yushiomote@gmail.com>"]
name = "perde"
version = "0.0.2"
edition = "2018"
description = "Fast and flexible serialization library."
homepage = "https://github.com/yushiomote/perde"
repository = "https://github.com/yushiomote/perde"
license = "MIT"
keywords = ["dataclass", "dataclasses", "serialization", "serde"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
pyo3 = { version = "0.12", features = ["extension-module"] }
perde-core = { version = "0.0.2", path = "../perde-core" }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8"
toml = "0.5"
rmp-serde = "0.14"

[lib]
name = "perde"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
