# {{ generator_note }}

[package]
authors = ["Yushi Omote <yushiomote@gmail.com>"]
name = "{{ format.crate_name }}"
version = "{{ format.version }}"
edition = "2018"
description = "{{ format.description }}"
homepage = "https://github.com/yushiomote/perde"
repository = "https://github.com/yushiomote/perde"
license = "MIT"
keywords = ["dataclass", "dataclasses", "serialization", "serde"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
pyo3 = { version = "{{ vars.pyo3_version }}", features = ["extension-module"] }
perde-core = { version = "{{ vars.perde_core_version }}", path = "../perde-core" }
serde = "1.0"
{%- for key, value in format.deps %}
{{ key }} = "{{ value }}"
{% endfor %}

[lib]
name = "{{ format.crate_name | snake_case }}"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
